# wa-bot-rust

./: .env.example  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: config.rs  handlers.rs  main.rs
src/commands/: admin.rs  public.rs
src/commands/public/: download.rs  info.rs  mod.rs  sticker.rs  viewonce.rs
