[package]
name = "wa-bot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
whatsapp-rust = { git = "https://github.com/oxidezap/whatsapp-rust" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
image = "0.25"
webp = "0.3"
anyhow = "1.0"
buffa = "0.8.1"
qr2term = "0.3"
tempfile = "3"
ffmpeg-sidecar = { version = "2.5.2", features = ["download_ffmpeg"] }
rayon = "1"
rustube = "0.6"